# Internet-download-manager-Trail-reset

./: .gitignore  Cargo.toml  README.md  sonar-project.properties
.github/workflows/: sonarcloud.yml
src/: cleanup.rs  idm.rs  killer.rs  main.rs  optimize.rs  startup.rs
