[package]
name = "idm-system-tool"
version = "1.0.0"
edition = "2021"

[dependencies]
winreg = "0.52"
dirs = "5"
eframe = { version = "0.27", default-features = false, features = ["default_fonts", "glow"] }

[dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Threading",
]

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "abort"
